--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<ul class="nav justify-content-center  ">
-        <li class="nav-item">
-            <a class="nav-link active" href="#" aria-current="page">Active link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled link</a>
-        </li>
-    </ul>, initial-scale=1.0">
+    <meta name="viewport" content="width==device-width, initial-scale=1.0">
     <title>Webdeveloper Portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3>
+                Ma<span class="text-primary">r</span>y
+            </h3>
+            <ul>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><button>Hire Me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
