--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width==device-width, initial-scale=1.0">
     <title>Webdeveloper Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,400;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
@@ -15,7 +18,7 @@
             <ul>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
     </header>
