--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3>
                 Ma<span class="text-primary">r</span>y
@@ -19,8 +19,18 @@
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><button class="btn">Hire Me</button></li>
+                <button class="btn">Contact</button>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn">Download CV</button>
+            </div>
+            <img src="/images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
