--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><button class="btn">Hire Me</button></li>
-                <button class="btn">Contact</button>
             </ul>
         </nav>
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn">Download CV</button>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn banner-btn">Download CV</button>
+                <button class="btn banner-btn" id="contact-btn">Contact</button>
             </div>
             <img src="/images/hardy.png" alt="">
         </div>
     </header>
     <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
 
     </main>
     <footer>
