Resume section completed

--- a/index.html
+++ b/index.html
@@ -201,11 +201,14 @@
                         </div>
                     </div>
                 </div>
-            </section>
 
+                <div class="resume-btn">
+                    <button class="btn banner-btn">Download CV</button>
+                </div>
+            </section>
         </main>
         <footer>
-
+            
         </footer>
     </body>
 </html>
