--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,400;1,800&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="styles/portfolio.css">
+        <script src="https://kit.fontawesome.com/97196a6301.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header">
@@ -30,8 +31,8 @@
                     <p class="banner-discription">Shot what able cold new see
                         hold.Friendly as an betrayed formerly he. Morning
                         because as to society behaved moments.</p>
-                    <button class="btn banner-btn">Download CV</button>
-                    <button class="btn banner-btn" id="contact-btn">Contact</button>
+                    <button class="btn banner-btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn banner-btn" id="contact-btn"><i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
                 <img src="/images/hardy.png" alt>
             </div>
@@ -203,7 +204,7 @@
                 </div>
 
                 <div class="resume-btn">
-                    <button class="btn banner-btn">Download CV</button>
+                    <button class="btn banner-btn"><i class="fa-solid fa-download"></i> Download CV</button>
                 </div>
             </section>
         </main>
@@ -226,6 +227,12 @@
             
             <div class="footer-column">
                     <h3 class="section-title">Let’s Message me</h3>
+                    <form class="contact" action="">
+                        <input type="text" placeholder="Your Name">
+                        <input type="email" name="" placeholder="Your Email">
+                        <textarea name="" placeholder="Your Meassage" id="" cols="30" rows="10"></textarea>
+                        <input class="btn" type="submit" value="Submit">
+                    </form>
             </div>
         </footer>
         </body>
