--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <button class="btn banner-btn"><i class="fa-solid fa-download"></i> Download CV</button>
                     <button class="btn banner-btn" id="contact-btn"><i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
-                <img src="../images/hardy.png" alt="">
+                <img src="./images/hardy.png" alt="">
             </div>
         </header>
         <main>
@@ -84,7 +84,7 @@
             <div class="skill-container">
                 <!-- .skills*4>img+h3.skill-title+p.skill-description  -->
                 <div class="skills">
-                    <img src="../images/icons/js.png" alt>
+                    <img src="./images/icons/js.png" alt>
                     <h3 class="skill-title">Vanilla JavaScript</h3>
                     <p class="skill-description">List skill/technologies here.
                         You can change the icon above to any of the 1500+
@@ -92,7 +92,7 @@
                         ligula eget dolor.</p>
                 </div>
                 <div class="skills">
-                    <img src="../images/icons/react.png" alt>
+                    <img src="./images/icons/react.png" alt>
                     <h3 class="skill-title">React</h3>
                     <p class="skill-description">List skill/technologies here.
                         You can change the icon above to any of the 1500+
@@ -100,7 +100,7 @@
                         ligula eget dolor.</p>
                 </div>
                 <div class="skills">
-                    <img src="../images/icons/nodejs.png" alt>
+                    <img src="./images/icons/nodejs.png" alt>
                     <h3 class="skill-title">Node.js </h3>
                     <p class="skill-description">List skill/technologies here.
                         You can change the icon above to any of the 1500+
@@ -108,7 +108,7 @@
                         ligula eget dolor.</p>
                 </div>
                 <div class="skills">
-                    <img src="../images/icons/mongo.png" alt>
+                    <img src="./images/icons/mongo.png" alt>
                     <h3 class="skill-title">MongoDB</h3>
                     <p class="skill-description">List skill/technologies here.
                         You can change the icon above to any of the 1500+
@@ -217,11 +217,11 @@
 
                     <div class="social-links">
                         <a href="www.facebook.com"><img
-                                src="../images/icons/facebook.png" alt></a>
+                                src="./images/icons/facebook.png" alt></a>
                         <a href="twitter.com"><img
-                                src="../images/icons/twitter.png" alt></a>
+                                src="./images/icons/twitter.png" alt></a>
                         <a href="instagram.com"><img
-                                src="../images/icons/insta.png" alt></a>
+                                src="./images/icons/insta.png" alt></a>
                     </div>
             </div>
             
